--- a/Projeto_Controle_Vendas.csproj
+++ b/Projeto_Controle_Vendas.csproj
@@ -100,6 +100,7 @@
   <ItemGroup>
     <Compile Include="CONEXAO\ConnectionFactory.cs" />
     <Compile Include="DAO\ClienteDAO.cs" />
+    <Compile Include="DAO\FornecedorDAO.cs" />
     <Compile Include="DAO\FuncionarioDAO.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -108,6 +109,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="MODEL\Cliente.cs" />
+    <Compile Include="MODEL\Fornecedor.cs" />
     <Compile Include="MODEL\Funcionario.cs" />
     <Compile Include="MODEL\Helpers.cs" />
     <Compile Include="Program.cs" />
@@ -117,6 +119,12 @@
     </Compile>
     <Compile Include="VIEW\Frmclientes.Designer.cs">
       <DependentUpon>Frmclientes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VIEW\FrmFornecedores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VIEW\FrmFornecedores.Designer.cs">
+      <DependentUpon>FrmFornecedores.cs</DependentUpon>
     </Compile>
     <Compile Include="VIEW\FrmFuncionarios.cs">
       <SubType>Form</SubType>
@@ -139,6 +147,9 @@
     </Compile>
     <EmbeddedResource Include="VIEW\Frmclientes.resx">
       <DependentUpon>Frmclientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VIEW\FrmFornecedores.resx">
+      <DependentUpon>FrmFornecedores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VIEW\FrmFuncionarios.resx">
       <DependentUpon>FrmFuncionarios.cs</DependentUpon>
